# terminatorX

./: .cproject  .cvsignore  .gitignore  AUTHORS  AUTHORS.md  ChangeLog  INSTALL  INSTALL.md  Makefile  Makefile.am  Makefile.in  NEWS  README  README.PERFORMANCE  README.PERFORMANCE.md  README.md  THANKS  THANKS.md  TODO  acconfig.h  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in  endian.h  meson.build  meson.options  terminatorX.appdata.xml  terminatorX.desktop  terminatorX.glade  terminatorX.gladep  terminatorX.keys.in  terminatorX.metainfo.xml  terminatorX.mime  terminatorX.spec.in  wav_read.cc  wav_write.cc
.github/workflows/: ci.yml  tarbuild.yml
CVSROOT/: cvsignore
aseqjoy/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  aseqjoy.1.in  aseqjoy.c  autogen.sh  configure.in
data/: meson.build  org.terminatorx.terminatorX-mime.xml.in  org.terminatorx.terminatorX.desktop.in
data/icons/: meson.build
debian/: Makefile.am  changelog  control  rules  terminatorx.menu
doc/: Makefile.am  configuration.html  contact.html  dragndrop.html  features.html  grabmode.html  guisetup.html  index.html  introduction.html  ladspaplugins.html  manual.ps  manual.sgml  mouseinputsetup.html  operation.html  preface.html  quickstart.html  requirements.html  sequencer.html  soundfileeditor.html  tex.dsl  turntablecontrols.html
doc/terminatorX-manual/C/: .cvsignore  Makefile.am  legal.xml  terminatorX-manual-C.omf  terminatorX-manual.xml
doc/terminatorX-manual/C/figures/: signalflow.dia
gnome-support/: Makefile.am  Makefile.in  terminatorX-app.xpm  terminatorX.desktop  terminatorX.keys.in  tx-gnome-install
help/: Makefile.am  meson.build  terminatorX-manual.omf.in  terminatorX.1.in
help/C/: index.docbook  terminatorX-manual.xml
icons/: .cvsignore  Makefile.am  meson.build  terminatorX.xpm
knob/: Makefile  merge  pixbuf  render_all  tX_knob.pov
src/: .clang-format  .cvsignore  Makefile.am  README.MMX  endian.c  endian.h  licmak.awk  main.cc  tX_audiodevice.cc  tX_audiodevice.h  tX_audiofile.cc  tX_audiofile.h  tX_capabilities.cc  tX_capabilities.h  tX_dial.c  tX_dial.h  tX_dialog.c  tX_dialog.cc  tX_dialog.h  tX_endian.c  tX_endian.h  tX_engine.c  tX_engine.cc  tX_engine.h  tX_event.cc  tX_event.h  tX_extdial.cc  tX_extdial.h  tX_flash.c  tX_flash.h  tX_glade_callbacks.cc  tX_glade_callbacks.h  tX_glade_interface.cc  tX_glade_interface.h  tX_glade_support.cc  tX_global.c  tX_global.h  tX_gui.c  tX_icon.c  tX_icon.h  (+54 more)
src/gui_icons/: Makefile.am  Makefile.in  create_pixbuf  tX_fx_close.xpm  tX_fx_up.xpm  tX_min_control.xpm  tx_record.xpm  tx_reload.xpm  tx_smaller_logo.xpm
src/icons/: Makefile.am  icons.pixbuf  tX_dialog.gresource.xml  tX_icons.gresource.xml  tX_knob.gresource.xml
src/smallknob/: Makefile.am  Makefile.in  knob0.xpm  knob11.xpm  knob13.xpm  knob14.xpm  knob16.xpm  knob19.xpm  knob2.xpm  knob23.xpm  knob24.xpm  knob29.xpm  knob3.xpm  knob31.xpm  knob37.xpm  knob4.xpm  knob40.xpm  knob41.xpm  knob42.xpm  knob44.xpm  knob46.xpm  knob48.xpm  knob49.xpm  knob5.xpm  knob6.xpm  knob7.xpm  knob9.xpm
terminatorX/: .cproject  AUTHORS  CHANGES  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.GNOME  README.PERFORMANCE  THANKS  TODO  acconfig.h  configure  configure.in  endian.cc  licmak.c  main.cc  tX.cc  tX.h  tX_types.h  terminatorX.glade  terminatorX.spec.in  turntable.cc  turntable.h  version.h  wav_file.h
terminatorX/debian/: copyright  files  substvars
terminatorX/doc/: Makefile.am  Makefile.doc  configuration.html  contact.html  dragndrop.html  features.html  grabmode.html  guisetup.html  html.dsl  index.html  installation.html  introduction.html  ladspaplugins.html  manual.ps  manual.sgml  mouseinputsetup.html  preface.html  quickstart.html  requirements.html  sequencer.html  soundfileeditor.html  synchronization.html  turntablecontrols.html
terminatorX/doc/img/: Makefile.am  signalflow.eps
terminatorX/doc/terminatorX-manual/C/: Makefile.am  legal.xml  terminatorX-manual.xml
terminatorX/doc/terminatorX-manual/C/figures/: signalflow.dia
terminatorX/gnome-support/: Makefile.am  Makefile.in  terminatorX-mime.xpm  terminatorX.desktop  terminatorX.keys  terminatorX.keys.in  tx-gnome-uninstall
terminatorX/src/: 3dnow.h  Makefile.am  Makefile.cygwin  Makefile.in  main.c  main.cc  mmx.h  tX_audiodevice.cc  tX_audiodevice.h  tX_audiofile.cc  tX_audiofile.h  tX_capabilities.cc  tX_capabilities.h  tX_dial.c  tX_dial.h  tX_dialog.cc  tX_dialog.h  tX_endian.c  tX_endian.h  tX_engine.cc  tX_engine.h  tX_event.cc  tX_event.h  tX_extdial.cc  tX_extdial.h  tX_flash.c  tX_flash.h  tX_glade_callbacks.cc  tX_glade_callbacks.h  tX_glade_interface.cc  tX_glade_interface.h  tX_global.c  tX_global.h  tX_gui.h  tX_icon.c  tX_icon.h  tX_knobloader.c  tX_knobloader.h  tX_ladspa.cc  tX_ladspa.h  (+40 more)
terminatorX/src/gui_icons/: Makefile.am  Makefile.in  icons.pixbuf  tX_fx_down.xpm  tX_minimize_panel.xpm  tx_audioengine.xpm  tx_grab.xpm  tx_minimize.xpm  tx_play.xpm  tx_power.xpm  tx_sequencer.xpm  tx_stop.xpm  tx_wave.xpm
terminatorX/src/icons/: Makefile.am  icons.pixbuf  knobs.pixbuf
terminatorX/src/smallknob/: Makefile.in  knob1.xpm  knob10.xpm  knob12.xpm  knob15.xpm  knob17.xpm  knob18.xpm  knob20.xpm  knob21.xpm  knob22.xpm  knob25.xpm  knob26.xpm  knob27.xpm  knob28.xpm  knob30.xpm  knob32.xpm  knob33.xpm  knob34.xpm  knob35.xpm  knob36.xpm  knob38.xpm  knob39.xpm  knob43.xpm  knob45.xpm  knob47.xpm  knob8.xpm
website/: Makefile  aseqjoy.xml  bugs.xml  changelog.xml  createpreview  createshot  docs.xml  download.xml  faq.xml  index.xml  linkdb.xml  links.xml  scratches.xml  screenshots.xml  script.js  sedscript  tX.dtd  tX.xsl  teXt.xsl  turntable.xml
